# haskell-socket-unix

./: .travis.yml  README.md  haskell-socket-unix.cabal  socket-unix.cabal  stack-ghc7.10.3.yaml  stack-ghc8.0.2.yaml  stack-ghc8.6.4.yaml  stack.yaml
platform/linux/System/Socket/Family/Unix/: Platform.hsc
platform/unix/System/Socket/Family/Unix/: Platform.hsc
platform_test/linux/: Platform.hs
platform_test/unix/: Platform.hs
src/System/Socket/Family/: Unix.hs  Unix.hsc
src/System/Socket/Family/Unix/: Internal.hsc
test/: Internal.hs  test.hs
