name:                haskell-socket-unix
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/vyacheslavhashov/haskell-socket-unix#readme
license:             MIT 
license-file:        LICENSE
author:              Vyacheslav Hashov
maintainer:          vyacheslavhashov@gmail.com
copyright:           2017 Vyacheslav Hashov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Socket.Family.Unix
  build-depends:       base >= 4.7 && < 5
                     , socket
                     , bytestring

  default-language:    Haskell2010

test-suite haskell-socket-unix-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , socket
                     , haskell-socket-unix
                     , tasty
                     , tasty-hunit
                     , bytestring
                     , unix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vyacheslavhashov/haskell-socket-unix
